--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
     <title>Granville Corner School</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app. If the site still does not display correctly please use <a href="https://support.google.com/chrome/answer/95346?co=GENIE.Platform%3DDesktop&hl=en">Google Chrome</a>, or <a href="https://www.mozilla.org/en-US/firefox/new/?v=b">Mozilla FireFox</a> to view this page</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
